# websocket-triarb-listener-python-rust

./: README.md
wspython/: README.md  arb.py  main.py
wsrust/: Cargo.toml  README.md
wsrust/src/: main.rs  pairmaker.rs  pairsocket.rs
